force-twisticonics/main/default/objects/ShippingGroupStatus__mdt/ShippingGroupStatus__mdt.object-meta.xml
<CustomObject>
    <label>Shipping Group Status</label>
    <pluralLabel>Shipping Group Statuses</pluralLabel>
</CustomObject>