force-twisticonics/main/default/objects/ShippingGroupStatus__mdt/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>DELIVERY</fullName>
                <label>Home Delivery</label>
            </value>
            <value>
                <fullName>shipforpickup</fullName>
                <label>Click &amp; Collect</label>
            </value>
            <value>
                <fullName>RETURN</fullName>
                <label>Return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>