force-twisticonics/main/default/objects/ShippingGroupStatus__mdt/fields/Html_Color__c.field-meta.xml
<CustomField>
    <fullName>Html_Color__c</fullName>
    <label>Html Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <label>status-green</label>
            </value>
            <value>
                <fullName>Orange</fullName>
                <color>#FF6600</color>
                <label>status-orange</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>status-red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>