force-twisticonics/main/default/objects/ShippingGroupStatus__mdt/fields/Information_to_display__c.field-meta.xml
<CustomField>
    <fullName>Information_to_display__c</fullName>
    <label>Information to display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>SOURCE_LOCATION</fullName>
                <label>Source location</label>
            </value>
            <value>
                <fullName>PICKUP_LOCATION</fullName>
                <label>Pickup location</label>
            </value>
            <value>
                <fullName>REASON_CODE</fullName>
                <label>Reason code</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>