force-twisticonics/main/default/objects/ShippingGroupStatus__mdt/fields/Source_Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Pickup_Location__c</fullName>
    <label>Source != Pickup Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>