force-twisticonics/main/default/objects/ShippingGroupStatus__mdt/fields/Status_OMS__c.field-meta.xml
<CustomField>
    <fullName>Status_OMS__c</fullName>
    <label>Status OMS</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>